# q-sapa

./: .gitignore  README.md  pyproject.toml
q_sapa/: __init__.py  advis_marker_faerdiggjort.py  advis_soeg.py  launch.py  models.py  selectors.py  soeg.py  utils.py
q_sapa/functionality/: __init__.py  advis_marker_faerdiggjort.py  advis_soeg.py  launch.py
tests/: test_advis_marker_faerdig.py  test_soeg.py
